--- a/test.html
+++ b/test.html
@@ -1,8 +1,30 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<script
-			type="application/javascript"
-			src="./budge.deploy.js">
-		</script>
+		<title>budge unit test</title>
+
+		<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.3.2.css">
+
+		<script type="application/javascript" src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
+
+		<script type="application/javascript" src="./budge.deploy.js"></script>
 	</head>
+
+	<body>
+		<div id="qunit"></div>
+
+		<div id="qunit-fixture"></div>
+
+		<script type="application/javascript">
+			QUnit.test( "budge unit test", function( assert ) {
+
+				assert.deepEqual( budge( [ 1, 2, 3 ], 1 ), [ 2, 3 ], "should be equal" );
+
+				assert.equal( Array.isArray( budge( [ 1, 2, 3 ], 2 ) ), true, "should return true" );
+
+				assert.deepEqual( budge( [ 1, 2, 3 ], true ), [ 1, 2 ], "should be equal" );
+
+			} );
+		</script>
+	</body>
 </html>
